--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,18 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    --> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+
+    <!--2023.4.29 React Start-->    
+    <!-- element 담기는 공간 virtual DOM-->
     <div id="root"></div>
+
+
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
